--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Google LLC",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "rm -rf dist/ && ncc build --minify --source-map --no-source-map-register src/index.ts",
+    "build": "rm -rf dist/ && ncc build --source-map --no-source-map-register src/index.ts",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write **/*.ts",
     "docs": "rm -rf docs/ && typedoc",
@@ -31,19 +31,19 @@
   "devDependencies": {
     "@types/chai": "^4.3.x",
     "@types/mocha": "^10.0.0",
-    "@types/node": "^18.8.5",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "@vercel/ncc": "0.34.0",
     "chai": "^4.3.x",
-    "eslint": "^8.25.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "mocha": "^10.0.0",
-    "prettier": "^2.7.1",
+    "mocha": "^10.1.0",
+    "prettier": "^2.8.0",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.16",
+    "typedoc": "^0.23.21",
     "typedoc-plugin-markdown": "^3.13.6",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   }
 }
