--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,12 @@ name: 'test'
 on:
   push:
     branches:
-    - 'main'
+      - 'main'
+      - 'release/**/*'
   pull_request:
     branches:
-    - 'main'
+      - 'main'
+      - 'release/**/*'
   workflow_dispatch:
 
 concurrency:
