--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "strict": true,
     "target": "es6"
   },
-  "exclude": ["dist/**/*", "node_modules", "**/*.test.ts"],
+  "exclude": ["dist/", "node_modules/", "tests/"],
   "typedocOptions": {
     "entryPoints": ["./src"],
     "entryPointStrategy": "expand",
