--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
-    "@vercel/ncc": "0.38.1",
-    "eslint": "^9.0.0",
+    "@vercel/ncc": "^0.38.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
