Ensure id-token permissions for publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,9 @@ jobs:
   publish:
     needs:
       - 'release'
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     runs-on: 'ubuntu-latest'
 
     steps:
