--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -15,6 +15,8 @@ on:
 
 jobs:
   draft-release:
+    permissions:
+      contents: 'write'
     name: 'Draft release'
     uses: 'google-github-actions/.github/.github/workflows/draft-release.yml@v1' # ratchet:exclude
     with:
