--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ on:
 
 jobs:
   release:
+    permissions:
+      contents: 'write'
     if: |-
       ${{ startsWith(github.event.head_commit.message, 'Release: v') }}
     name: 'Release'
