--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -13,6 +13,10 @@ on:
           - 'minor'
           - 'patch'
 
+permissions:
+  contents: 'read'
+  pull-requests: 'write'
+
 jobs:
   draft-release:
     uses: 'google-github-actions/.github/.github/workflows/draft-release.yml@v3' # ratchet:exclude
